corrections du contraste

--- a/style.css
+++ b/style.css
@@ -807,7 +807,7 @@ h4 {
 
 .tc-white {
 
-    color: #FFFFFF !important;
+    color: black !important;
 }
 
 .btn-atomic-tangerine {
